kubernetes-manifest/network-policies/alloy-core-policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: coredns-from-alloy
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: alloy-singleton
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    
    # 2. Allow Alloy pods to talk to each other to form the cluster
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: "7946"
              protocol: TCP
            - port: "7946"
              protocol: UDP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-coredns-from-alloy"
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: observability
        app.kubernetes.io/name: alloy-singleton
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "alloy-egress-to-observability"
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: alloy-singleton
  egress:
  - toFQDNs:
      - matchName: "prometheus.laptop1.local"
    toPorts:
      - ports:
          - port: "80"
            protocol: TCP
          - port: "443"
            protocol: TCP
          - port: "3100"
            protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-alloy-to-apiserver
  namespace: observability
spec:
  description: "Connection from all k8s-monitoring pods to control plane components"
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - alloy-operator
          - alloy-singleton
          - kube-state-metrics
  egress:
    - toEntities:
        - kube-apiserver
