kubernetes-manifest/network-policies/cloudnative-pg.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-kubelet-to-cnpg-probes
  namespace: database
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-cnpg-to-apiserver
  namespace: database
spec:
  description: "Connection from cloudnative postgres to control plane components"
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - cloudnative-pg
  egress:
    - toEntities:
        - kube-apiserver
