kubernetes-manifest/network-policies/coredns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-dns-standard
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      k8s-app: kube-dns
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 9.9.9.9/32
        - ipBlock:
            cidr: 8.8.8.8/32
        - ipBlock:
            cidr: 1.1.1.1/32
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
