kubernetes-manifest/network-policies/flux-operator.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: flux-to-apiserver
  namespace: flux-system
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - flux-operator
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-kubelet-to-flux-probes
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: flux
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9440"
              protocol: TCP
