kubernetes-manifest/network-policies/secret-store-csi-driver.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-csi-driver-to-apiserver"
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app: secrets-store-csi-driver
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
