kubernetes-manifest/network-policies/snapshot-controller.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "snapshot-controller-to-apiserver-coredns"
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app: snapshot-controller
  egress:
  - toEntities:
      - kube-apiserver
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
